--- a/_includes/nav-page.html
+++ b/_includes/nav-page.html
@@ -3,7 +3,7 @@
    <div data-toggle="sticky">
 
       <!--Header & Branding region-->
-      <div class="header header-dark bg-dark bg-op-1 border-primary border-op-4 sticky-bg-dark sticky-bg-op-9">
+      <div class="header header-dark bg-dark border-primary border-op-4 sticky-bg-dark">
          <div class="header-inner container">
             <div class="header-brand">
                <a class="header-brand-text" href="/" title="Home">
@@ -25,16 +25,6 @@
                <div class="navbar-main collapse ">
                   <ul class="nav navbar-nav navbar-dark">
                      <li class="nav-item"></li>
-
-                     <li class="nav-item">
-                        <a href="#posts" data-toggle="scroll-link" data-dimiss="jpanel-menu"
-                           class="nav-link link-effect-slideup"> <span class="nav-link-inner" data-title="Posts">Posts</span>
-                        </a>
-                     </li>
-                     <li class="nav-item">
-                        <a href="#about" data-toggle="scroll-link" data-dimiss="jpanel-menu" class="nav-link link-effect-slideup">
-                           <span class="nav-link-inner" data-title="About">About</span> </a>
-                     </li>
                      <li class="nav-item">
                         <a href="#contact" data-toggle="scroll-link" data-dimiss="jpanel-menu"
                            class="nav-link link-effect-slideup">
