--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,14 +1,13 @@
-<section class="bg-primary" id="about">
+<section class="bg-secondary py-5 py-lg-6" id="about">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+        <div class="row text-center text-white">
+            <div class="col-lg-10 offset-lg-1">
                 <h2 class="section-heading">About</h2>
                 <hr class="light">
                 <p class="text-faded"> 
                 I've always felt that documentation was out of touch or hard to follow.  I think this stems from the fact
                 that it was authored by the experts who are closest to the technology.  I'm hoping to help out by taking
                 my experiences and turning them into something a little more digestable.</p>
-                <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
             </div>
         </div>
     </div>
