--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,28 +1,34 @@
-<section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
-                <hr class="primary">
-                <p>Have any questions or comments? Want to talk about your next project or adventure? Drop me a line and I'll get back to you as soon as possible!</p>
-            </div>
-            <div class="col-sm-4 col-lg-2 col-lg-offset-2 text-center">
-                <a href="https://twitter.com/{{ site.twitter_username }}">
-                    <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>{{ site.twitter_username }}</p>
-                </a>
-            </div>
-            <div class="col-sm-4 col-lg-2 col-lg-offset-1 text-center">
-                <i class="fa fa-comments fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="https://github.com/BatteryAcid/feedback/issues/new" title="Leave feedback" target="_blank">Leave me some feedback</a></p>
-                </a>
-            </div>
-            <div class="col-sm-4 col-lg-2 col-lg-offset-1 text-center">
-                <a href="https://github.com/{{ site.github_username }}">
-                <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>{{ site.github_username }}</p>
-                </a>
-            </div>
-        </div>
-    </div>
+<section id="contact" class="contact-footer mt-5 mt-lg-6" class="my-5 my-lg-6">
+   <div class="container">
+      <div class="row">
+         <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <hr class="border-primary">
+         </div>
+         <div class="col-lg-10 offset-lg-1 text-center">
+            <p>Have any questions or comments? Want to talk about your next project or adventure?
+               Drop me a line and I'll get back to you as soon as possible!</p>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-sm-4 text-center">
+            <a href="https://twitter.com/{{ site.twitter_username }}">
+               <i class="fab fa-twitter fa-3x"></i>
+               <p>{{ site.twitter_username }}</p>
+            </a>
+         </div>
+         <div class="col-sm-4 text-center">
+            <a href="https://github.com/BatteryAcid/feedback/issues/new">
+               <i class="fa fa-comments fa-3x"></i>
+               <p>Leave me some feedback</p>
+            </a>
+         </div>
+         <div class="col-sm-4 text-center">
+            <a href="https://github.com/{{ site.github_username }}">
+               <i class="fab fa-github fa-3x"></i>
+               <p>{{ site.github_username }}</p>
+            </a>
+         </div>
+      </div>
+   </div>
 </section>
