--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,30 +1,38 @@
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tutorials, talks, and more for software developers">
-    <meta name="author" content="Bruce Shaw">
-    <title>{{ page.title }}</title>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Tutorials, talks, and more for software developers">
+   <meta name="author" content="BatteryAcidDev">
+   <title>{{ page.title }}</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
+   <!-- Bootstrap v4.5.0 CSS via CDN -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
-    <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" type="text/css">
+   <!-- Custom Fonts -->
+   <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
 
-    <!-- Plugin CSS -->
-    <link rel="stylesheet" href="/css/animate.min.css" type="text/css">
+   <!-- Theme style -->
+   <link href="{{'/assets/css/theme-style.min.css' | absolute_url }}" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/main.css" type="text/css">
+   <!-- custom colour override-->
+   <link href="{{'/assets/css/colour-green-bright.min.css' | absolute_url }}" id="colour-scheme" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+   <link href="{{'/assets/css/custom.css' | absolute_url }}" rel="stylesheet">   
 
+   <!-- Google fonts -->
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Rambla:400,700' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Roboto:100,400,700' rel='stylesheet' type='text/css'>
+
+
+   <!-- moved this global path here from scripts to correct site path issues  -->
+   <script type="text/javascript">
+   var Config = {
+      PLUGINS_LOCALPATH: "{{'/assets/plugins/' | absolute_url }}"
+   };
+   </script>
+   
 </head>
