--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,33 +1,33 @@
-<section id="posts">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Recent Posts</h2>
-                <hr class="primary">
-            </div>
-        </div>
-    </div>
+<section id="posts" class="my-5 my-lg-6">
+   <div class="container">
+      <div class="row">
+         <div class="col-lg-12 text-center">
+            <h2 class="">Recent Posts</h2>
+            <hr class="border-primary">
+         </div>
+      </div>
+   </div>
 
-    <div class="container">
-        <div class="row">
-            {% for post in site.posts limit:6 %}
-                {% unless post.draft %}
-                    <div class="col-sm-4">
-                        <div>
-                            <h3>
-                                <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-                            </h3>
-                            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
-                            <p class="text-muted">{{ post.description }}</p>
-                        </div>
-                    </div>
-                {% endunless %}    
-            {% endfor %}
-        </div>
-        <div class="row text-center">
-            <div class="col-sm-12">
-                <a href="/posts" class="btn btn-primary btn-xl page-scroll">View All</a>
+   <div class="container">
+      <div class="row">
+         {% for post in site.posts limit:6 %}
+         {% unless post.draft %}
+         <div class="col-sm-4">
+            <div>
+               <h3>
+                  <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+               </h3>
+               <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+               <p class="text-muted">{{ post.description }}</p>
             </div>
-        </div>
-    </div>
+         </div>
+         {% endunless %}
+         {% endfor %}
+      </div>
+      <div class="row text-center">
+         <div class="col-sm-12">
+            <a href="/posts" class="btn btn-primary btn-xl page-scroll">View All</a>
+         </div>
+      </div>
+   </div>
 </section>
