--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,13 +1,7 @@
-<!-- jQuery -->
-<script src="/js/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- Popper 1.16.0 via CDN, needed for Bootstrap Tooltips & Popovers -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="/js/bootstrap.min.js"></script>
-
-<!-- Plugin JavaScript -->
-<script src="/js/jquery.easing.min.js"></script>
-<script src="/js/jquery.fittext.js"></script>
-<script src="/js/wow.min.js"></script>
-
-<!-- Custom Theme JavaScript -->
-<script src="/js/creative.js"></script>
+<!--Custom scripts-->
+<script src="{{'/assets/js/script.min.js' | absolute_url }}"></script>
