--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,16 +3,24 @@
 
    {% include head.html %}
 
-   <body class="page page-onepager header-ontop page-index-onepager-image-full-height navbar-layout-default">
+   <body class="page page-onepager header-ontop navbar-layout-default">
       <!-- @plugin: page loading indicator, delete to remove loader -->
       <div class="page-loader" data-toggle="page-loader"></div>
 
       <a href="#content" id="top" class="sr-only">Skip to content</a>
 
-      {% include nav.html %}
-      {% include hero.html %}
-      {% include posts.html %}
-      {% include call-to-action.html %}
+      {% include nav-page.html %}
+
+      <div id="highlighted">
+         <div class="hero-page bg-white overlay overlay-primary overlay-op-6 text-center px-3 py-5 py-md-10 flex-valign"
+            data-bg-img="{{'/assets/img/header.jpg' | absolute_url }}" data-css='{"background-position": "center bottom","background-attachment": "fixed"}'>
+            <h1 class="mt-6 text-white" data-animate="fadeIn" data-animate-delay="0.2">
+            {{page.title}}
+            </h1>
+         </div>
+      </div>
+
+      {{ content }}
       {% include contact.html %}
       {% include scripts.html %}
 
