--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,13 @@
 ---
-layout: default-post
+layout: page
 ---
-<section class="bg-primary" id="about" itemtype="http://schema.org/BlogPosting">
+<section class="my-4" itemtype="http://schema.org/BlogPosting">
    <div class="container">
       <div class="row">
          <div class="col-lg-8 col-lg-offset-2">
-            <h2 class="section-heading" itemprop="name headline">{{ page.title }}</h2>
-            <hr align="left" class="light">
-            <p class="text-faded">{{ page.description }}</p>
+            <p><a href="/posts"><i class="fa fa-chevron-left mb-1"></i> Back to posts</a></p>
 
+            <p class="">{{ page.description }}</p>
             <p class="post-meta">
                <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
                {% if page.author %} • 
@@ -17,6 +16,7 @@ layout: default-post
                   </span>
                {% endif %}
             </p>
+            <hr align="left" class="border-primary">
          </div>
       </div>
    </div>
