--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,22 +11,16 @@
          </div>
       </div>
       <div class="row">
-         <div class="col-sm-4 text-center">
-            <a href="https://twitter.com/{{ site.twitter_username }}">
+         <div class="col-sm-6 text-center">
+            <a target="_blank" href="https://twitter.com/{{ site.twitter_username }}">
                <i class="fab fa-twitter fa-3x"></i>
                <p>{{ site.twitter_username }}</p>
             </a>
          </div>
-         <div class="col-sm-4 text-center">
-            <a href="https://github.com/BatteryAcid/feedback/issues/new">
+         <div class="col-sm-6 text-center">
+            <a target="_blank" href="https://github.com/BatteryAcid/feedback/issues/new">
                <i class="fa fa-comments fa-3x"></i>
                <p>Leave me some feedback</p>
-            </a>
-         </div>
-         <div class="col-sm-4 text-center">
-            <a href="https://github.com/{{ site.github_username }}">
-               <i class="fab fa-github fa-3x"></i>
-               <p>{{ site.github_username }}</p>
             </a>
          </div>
       </div>
