Added discord info

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,15 +11,21 @@
          </div>
       </div>
       <div class="row">
-         <div class="col-sm-6 text-center">
+         <div class="col-sm-4 text-center">
             <a target="_blank" href="https://twitter.com/{{ site.twitter_username }}">
                <i class="fab fa-twitter fa-3x"></i>
                <p>{{ site.twitter_username }}</p>
             </a>
          </div>
-         <div class="col-sm-6 text-center">
+         <div class="col-sm-4 text-center">
+            <a target="_blank" href="https://t.co/8fcI5ERmg9?amp=1">
+               <i class="fab fa-discord fa-3x"></i>
+               <p>Discord server</p>
+            </a>
+         </div>
+         <div class="col-sm-4 text-center">
             <a target="_blank" href="https://github.com/BatteryAcid/feedback/issues/new">
-               <i class="fa fa-comments fa-3x"></i>
+               <i class="fab fa-github fa-3x"></i>
                <p>Leave me some feedback</p>
             </a>
          </div>
