Added latest video post
- added twitter and discord widgets
- updated about section

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,14 +1,15 @@
 <section class="bg-secondary py-5 py-lg-6" id="about">
-    <div class="container">
-        <div class="row text-center text-white">
-            <div class="col-lg-10 offset-lg-1">
-                <h2 class="section-heading">About</h2>
-                <hr class="light">
-                <p class="text-faded"> 
-                I've always felt that documentation was out of touch or hard to follow.  I think this stems from the fact
-                that it was authored by the experts who are closest to the technology.  I'm hoping to help out by taking
-                my experiences and turning them into something a little more digestable.</p>
-            </div>
-        </div>
-    </div>
+   <div class="container">
+      <div class="row text-center text-white">
+         <div class="col-lg-10 offset-lg-1">
+            <h2 class="section-heading">About</h2>
+            <hr class="light">
+            <p class="text-faded">
+               With BatteryAcidDev, I’m hoping to compile a collection of software related
+               experiences I’m currently working through or experimenting with, in a format that
+               may be beneficial to others. Let me know if you’d like to collaborate on an idea or
+               if you have any questions or comments.</p>
+         </div>
+      </div>
+   </div>
 </section>
