--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<section id="contact" class="contact-footer mt-5 mt-lg-6" class="my-5 my-lg-6">
+<section id="contact" class="contact-footer my-5 mt-lg-6">
    <div class="container">
       <div class="row">
          <div class="col-lg-12 text-center">
@@ -28,6 +28,18 @@
                <i class="fab fa-github fa-3x"></i>
                <p>Leave me some feedback</p>
             </a>
+         </div>
+      </div>
+      <div class="row mt-6">
+         <div class="col-lg-6 text-center">
+            <a class="twitter-timeline" data-width="600" data-height="500" data-theme="light"
+               data-link-color="#19CF86" href="https://twitter.com/BatteryAcidDev&ref_src=twsrc%5Etfw">Tweets
+               by BatteryAcidDev</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </div>
+         <div class="col-lg-6 text-center">
+            <iframe src="https://discordapp.com/widget?id=724813552837459998&theme=dark" width="400"
+               height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
          </div>
       </div>
    </div>
